prusti-tests/tests/counterexamples/verify-fail/no-annotations/never-type.rs
#![feature(never_type)]

/* COUNTEREXAMPLE :
    fn diverging()
        empty, always fails

*/

fn diverging() -> ! {
    panic!();  //~ ERROR panic!(..) statement might be reachable
}

fn main() {}
